--- a/templates/account/password_forgot.html
+++ b/templates/account/password_forgot.html
@@ -7,15 +7,15 @@
         
     <div class="col-xs-12 col-sm-6 col-sm-offset-3">
         {% include "_flash_messages.html" %}
-        <h4 class="text-center">{{ _('Reset your Password') }}</h4>
+        <h4 class="text-center">Reset your Password</h4>
         <form method="post" role="form">
             <fieldset>
           {{ form.hidden_tag() }}
-          {{ render_field(form.email_addr, placeholder= _('Enter your email address'), class="form-control", type="email", required="required", autofocus="autofocus" ) }}
+          {{ render_field(form.email_addr, placeholder="Enter your email address", class="form-control", type="email", required="required", autofocus="autofocus" ) }}
           
                 <div class="pull-right" role="group">
-                    <a href="{{ url_for('account.signin') }}" class="btn btn-default">{{ _('Cancel') }}</a>
-                    <input type="submit" value="{{_('Reset Password')}}" class="btn btn-success" />
+                    <a href="{{ url_for('account.signin') }}" class="btn btn-default">Cancel</a>
+                    <input type="submit" value="Reset Password" class="btn btn-success" />
                 </div>
             </fieldset>
         </form>
