--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -13,12 +13,12 @@
         <form method="post" class="form-horizontal">
             <fieldset>
       {{ form.hidden_tag() }}
-      {{ render_field(form.new_password, placeholder=_('my new password'), class="form-control", type="password", required="required", pattern=".{6,}", title="Must be a minimum of 6 characters", autofocus="autofocus") }}
-      {{ render_field(form.confirm, placeholder=_('my new password again'), class="form-control", type="password", required="required", pattern=".{6,}", title="Must be a minimum of 6 characters") }}
+      {{ render_field(form.new_password, placeholder="New password", class="form-control", type="password", required="required", pattern=".{6,}", title="Must be a minimum of 6 characters", autofocus="autofocus") }}
+      {{ render_field(form.confirm, placeholder="Confirm new password", class="form-control", type="password", required="required", pattern=".{6,}", title="Must be a minimum of 6 characters") }}
       
                 <div class="pull-right" role="group">
-                    <a href="{{ url_for('account.profile', name=current_user.name) }}" class="btn btn-default">{{ _('Cancel') }}</a>
-                    <input type="submit" value="{{_('save changes')}}" class="btn btn-success" />
+                    <a href="{{ url_for('account.profile', name=current_user.name) }}" class="btn btn-default">Cancel</a>
+                    <input type="submit" value="Save Changes" class="btn btn-success" />
                 </div>
             </fieldset>
         </form>
