--- a/templates/blog/blog_post.html
+++ b/templates/blog/blog_post.html
@@ -15,7 +15,7 @@
     </div>
     <div class="row">
         <div class="col-xs-12 col-sm-7 col-sm-offset-1">
-            <a href="{{url_for('blog.index')}}" class="btn btn-danger">{{_('Back')}}</a>
+            <a href="{{url_for('blog.index')}}" class="btn btn-danger">Back</a>
         </div>
     </div>
 </div>
