--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -16,7 +16,7 @@
             {% endfor %}
         {% else %}
             <div class="col-xs-12 col-sm-7 col-sm-offset-1">
-                <h1>{{ _('Sorry! No posts so far.') }}</h1>
+                <h1>Sorry! No posts so far.</h1>
             </div>
         {% endif %}
         
