--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -47,7 +47,7 @@
     <section class="white pattern-white-wall box-shadow-white-bottom">
         <div class="container container-padded">
             <div class="col-md-11 padding-bottom-sm">
-                <h2>{{ _('Technology') }}</h2>
+                <h2>Technology</h2>
                 
                 <p>{{ brand }} is built on top of <a href="http://docs.pybossa.com/"> PyBossa </a>, an open-source Python framework for the creation of
                 crowdsourcing projects. To complement the PyBossa framework, custom Flask plugins are used to handle certain {{brand}} specific
@@ -67,7 +67,7 @@
     <section class="white">
         <div class="container container-padded">
             <div class="col-md-11 padding-top-xs padding-bottom-sm">
-                <h2>{{ _('Contact information') }}</h2>
+                <h2>Contact information</h2>
                 <ul>
                     <li>Visit the <a href="{{url_for('discourse.index')}}">LibCrowds Community</a> for more information or to report any issues.</li>     
                 </ul>
