--- a/templates/projects/settings.html
+++ b/templates/projects/settings.html
@@ -12,16 +12,16 @@
             <!-- Project -->
             <div class="col-sm-9 col-sm-offset-3 xs-center">
                 {% include "_flash_messages.html" %}
-                <h1><strong>{{ project.name }}</strong>: {{ _('Settings') }}</h1>
+                <h1><strong>{{ project.name }}</strong>: Settings</h1>
                 <div class="btn-group">
-                    <a class="btn" href="{{ url_for('project.update', short_name = project.short_name) }}"><i class="glyphicon glyphicon-edit icon-white"></i> {{ _('Edit the project details') }}</a>
-                    <a class="btn" href="{{ url_for('project.task_settings', short_name = project.short_name) }}"><i class="glyphicon glyphicon-wrench icon-white"></i> {{ _('Task Settings') }}</a>
-                    <a class="btn" href="{{ url_for('project.delete', short_name = project.short_name) }}"><i class="glyphicon glyphicon-trash icon-white"></i> {{ _('Delete the project') }}</a>
+                    <a class="btn" href="{{ url_for('project.update', short_name = project.short_name) }}"><i class="glyphicon glyphicon-edit icon-white"></i> Edit the project details</a>
+                    <a class="btn" href="{{ url_for('project.task_settings', short_name = project.short_name) }}"><i class="glyphicon glyphicon-wrench icon-white"></i> Task Settings</a>
+                    <a class="btn" href="{{ url_for('project.delete', short_name = project.short_name) }}"><i class="glyphicon glyphicon-trash icon-white"></i> Delete the project</a>
                 </div>
             </div>
             {% else %}
             <div class="page-header">
-                <h1>{{ _('Sorry! This project does not exist.') }}</h1>
+                <h1>Sorry! This project does not exist.</h1>
             </div>
             {% endif %}
         </div>
