--- a/templates/projects/snippets/options.html
+++ b/templates/projects/snippets/options.html
@@ -2,7 +2,7 @@
     <div class="col-md-12">
         <h1><strong>{{project.name}}</strong>: Task Presenter Editor</h1>
         <p class="lead">First select one of the following 
-        <strong>{{_('templates')}}</strong> {{_('as a basis for your project')}}
+        <strong>templates</strong> as a basis for your project
     </div>
 </div>
 {% for column in presenters|batch(2)%}
