--- a/templates/projects/tasks/csv.html
+++ b/templates/projects/tasks/csv.html
@@ -1,6 +1,6 @@
 <a href="{{url_for(target, short_name=project.short_name, type='csv')}}" rel="nofollow">
     <div class="well">
       <i class="fa fa-file-excel-o fa-4x"></i>
-        <h3 class="margin-bottom-xs">{{_('CSV')}}</h3> 
+        <h3 class="margin-bottom-xs">CSV</h3> 
     </div>
 </a>
