--- a/templates/projects/tasks_browse.html
+++ b/templates/projects/tasks_browse.html
@@ -11,18 +11,18 @@
         <div class="row">
             <div class="col-sm-9 col-sm-offset-3">
                 {% include "_flash_messages.html" %}
-                {{ helper.render_project_title(project, upload_method, subtitle=_('Browse tasks')) }}
+                {{ helper.render_project_title(project, upload_method, subtitle="Browse tasks") }}
                 {% for t in tasks %}
                 {% set task_pct = t.pct_status*100 %}
                 <div class="row vcenter hcenter padding-top-xs">
                         <div class="col-sm-3">
                             {% if task_pct >= 100 %}
-                            {{_('Task')}} <span class="label label-success">#{{ t.id }}</span>
+                            Task <span class="label label-success">#{{ t.id }}</span>
                             {% else %}
-                            {{_('Task')}} <span class="label label-info">#{{ t.id }}</span>
+                            Task <span class="label label-info">#{{ t.id }}</span>
                         {% endif %}
                         <br/>
-                             {{ t.n_task_runs }} {{_('of')}} {{ t.n_answers }} contributions
+                             {{ t.n_task_runs }} of {{ t.n_answers }} contributions
                         </div>
                         {% if task_pct >= 100 %}
                         <div class="progress progress-success progress-striped col-md-5 remove-margin-bottom remove-padding"> 
@@ -37,25 +37,25 @@
                         {% if task_pct >= 100 %}
                             <a id="fulldownload" class="btn btn-success" href="{{ url_for('project.export', 
                                 short_name=project.short_name,
-                                task_id=t.id) }}"><i class="fa fa-download"></i> {{_('Download Results')}}</a>
+                                task_id=t.id) }}"><i class="fa fa-download"></i> Download Results</a>
                         {% elif task_pct > 0 and task_pct < 100 %}
                             <a id="partialdownload" class="btn btn-primary" href="{{ url_for('project.export', 
                                 short_name=project.short_name,
-                                task_id=t.id) }}"><i class="fa fa-download"></i> {{_('Download Partial results')}}</a>
+                                task_id=t.id) }}"><i class="fa fa-download"></i> Download Partial results</a>
 
                          {% else %}
-                            <a id="nothingtodownload" class="btn btn-default disabled" href="#"> {{_('Nothing to download yet')}}</a>
+                            <a id="nothingtodownload" class="btn btn-default disabled" href="#"> Nothing to download yet</a>
                          {% endif %}
                         </div>
                 </div>
                 {% endfor %}
-                {{ helper.render_pagination(pagination, _('')) }}
+                {{ helper.render_pagination(pagination, '') }}
             </div>
         </div>
                
 {% else %}
   <div class="page-header">
-      <h1>{{_('Sorry! This project does not exist.')}}.</h1>
+      <h1>Sorry! This project does not exist.</h1>
   </div>
 {% endif %}
         </div>
