--- a/templates/projects/tutorial.html
+++ b/templates/projects/tutorial.html
@@ -11,7 +11,7 @@
         <a id="start" href={{url_for('project.presenter', short_name = project.short_name)}}
            class="btn btn-danger btn-lg"> 
            <i class="glyphicon glyphicon-thumbs-up"></i> 
-           {{_('Contribute')}}</a>
+           Contribute</a>
     </div>
 </div>
 <div id='PYBOSSA_USER_LOCALE' hidden>
