--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -18,9 +18,9 @@
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li class="nav-link {% if active_page == 'about' %} active{% endif %}"><a href="{{ url_for('home.about')}}">{{ _('About') }}</a></li>
-              <li class="nav-link {% if active_page == 'projects' %} active{% endif %}"><a href="{{ url_for('project.index') }}">{{ _('Projects') }}</a></li>
-              <li class="nav-link {% if active_page == 'globalstats' %} active{% endif %}"><a href="{{ url_for('statistics.index')}}">{{ _('Statistics') }}</a></li>
+              <li class="nav-link {% if active_page == 'about' %} active{% endif %}"><a href="{{ url_for('home.about')}}">About</a></li>
+              <li class="nav-link {% if active_page == 'projects' %} active{% endif %}"><a href="{{ url_for('project.index') }}">Projects</a></li>
+              <li class="nav-link {% if active_page == 'globalstats' %} active{% endif %}"><a href="{{ url_for('statistics.index')}}">Statistics</a></li>
               <li class="nav-link"><a href="{{url_for('discourse.index')}}">Community
                         {% if current_user.is_authenticated() %}
                                         {% if current_user.info.notification_count and current_user.info.notification_count > 0 %}
@@ -32,22 +32,22 @@
                                         {% endif %}
                         {% endif %}
               </a></li>
-              <li class="nav-link {% if active_page == 'data' %} active{% endif %}"><a href="{{ url_for('data.index')}}">{{ _('Data') }}</a></li>
-              <li class="nav-link {% if active_page == 'blog' %} active{% endif %}"><a href="{{ url_for('blog.index')}}">{{ _('Blog') }}</a></li>
+              <li class="nav-link {% if active_page == 'data' %} active{% endif %}"><a href="{{ url_for('data.index')}}">Data</a></li>
+              <li class="nav-link {% if active_page == 'blog' %} active{% endif %}"><a href="{{ url_for('blog.index')}}">Blog</a></li>
          </ul>
             {% include '_gcs_form.html' ignore missing %}
           {% if current_user.is_authenticated() %}
             <ul class="nav navbar-nav navbar-right">
                 <li class="nav-link"><a href="#" data-toggle="dropdown" class="dropdown-toggle"><i class="icon fa fa-user"></i> {{ current_user.name | truncate(10,true) }} <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li class="nav-link"><a href="{{ url_for('account.profile', name=current_user.name) }}"><i class="fa fa-user"></i> {{ _('Profile') }}</a></li>
-                    <li class="nav-link"><a href="{{ url_for('account.update_profile', name=current_user.name) }}"><i class="fa fa-cog"></i> {{ _('Settings') }}</a></li>
+                    <li class="nav-link"><a href="{{ url_for('account.profile', name=current_user.name) }}"><i class="fa fa-user"></i> Profile</a></li>
+                    <li class="nav-link"><a href="{{ url_for('account.update_profile', name=current_user.name) }}"><i class="fa fa-cog"></i> Settings</a></li>
                     {% if current_user.admin == 1 %}
                     <li class="divider"></li>
-                    <li class="nav-link"><a href="{{ url_for('admin.index') }}"><i class="fa fa-cog"></i> {{ _('Admin') }}</a></li>
+                    <li class="nav-link"><a href="{{ url_for('admin.index') }}"><i class="fa fa-cog"></i> Admin</a></li>
                     {% endif %}
                     <li class="divider"></li>
-                  <li class="nav-link"><a href="{{ url_for('discourse.signout') }}"><i class="fa fa-power-off"></i> {{ _('Sign Out') }}</a></li>
+                  <li class="nav-link"><a href="{{ url_for('discourse.signout') }}"><i class="fa fa-power-off"></i> Sign Out</a></li>
                 </ul>
               </li>
             </ul>
@@ -55,7 +55,7 @@
 
             {% if current_user.is_anonymous() %}
             <ul class="nav navbar-nav navbar-right">
-              <li class="nav-link"><a href="{{ url_for('account.signin') }}">{{ _('Sign in') }}</a></li>
+              <li class="nav-link"><a href="{{ url_for('account.signin') }}">Sign in</a></li>
             </ul>
             {% endif %}
           </div><!--/.nav-collapse -->
