--- a/templates/account/_helpers.html
+++ b/templates/account/_helpers.html
@@ -1,24 +1,3 @@
-{% macro render_twitter_btn(project) %}
-<a href="https://twitter.com/share" class="twitter-share-button"
-    data-text="{{ _('I\'ve done') }} {{project.c}} {{ _('tasks for the @PyBossa project:') }} {{project.name}}. {{ _('Do you want to help?') }} {{url_for('blplugin.details',short_name=project.short_name,_external=True)}}"
-    data-count="none">{{ _('Tweet') }}</a>
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-{% endmacro %}
-
-{% macro render_googlePlus_btn(project) %}
-<!-- Place this tag in your head or just before your close body tag. -->
-<script type="text/javascript" src="https://apis.google.com/js/plusone.js">
-  {parsetags: 'explicit'}
-</script>
-
-<!-- Place this tag where you want the +1 button to render. -->
-<div class="g-plusone" data-size="medium" data-annotation="none" data-href="{{url_for('blplugin.details',short_name=project.short_name,_external=True)}}"></div>
-
-<!-- Place this render call where appropriate. -->
-<script type="text/javascript">gapi.plusone.go();</script>
-{% endmacro %}
-
-
 {% macro render_user_profile(user, upload_method, settings, private=True) %}
 <div class="row margin-bottom">
     <div class="col-sm-6 col-xs-12 text-center">
@@ -38,24 +17,24 @@
                     <a class="remove-colour" href="{{url_for('leaderboard.index')}}">
                     {% endif %}
                     <i class="fa fa-trophy fa-4x"></i>
-                    <p>{{ _('Rank')}}</p>
+                    <p>Rank</p>
                     <p class="score">{{ user.rank }}</p>
                 {% if private %}</a>{% endif %}
                 {% else %}
                     <i class="fa fa-trophy fa-4x"></i>
-                    <p>{{ _('Rank') }}</p>
-                    <p class="score">{{ _('0') }}</p>
+                    <p>Rank</p>
+                    <p class="score">0</p>
                 {% endif %}
             </div>
             
             <div class="col-xs-6 text-center">
                 {% if user.score %}
                     <i class="fa fa-tasks fa-4x"></i>
-                    <p>{{ _('Contributions') }}</p>
+                    <p>Contributions</p>
                     <p class="score">{{user.score}}</p>
                 {% else %}
                     <i class="fa fa-tasks fa-4x"></i>
-                    <p>{{ _('Contributions') }}</p>
+                    <p>Contributions</p>
                     <p class="score">0</p>  
                 {% endif %}
             </div>
@@ -63,19 +42,19 @@
         <hr class="extra-margins">
             
         <div class="col-sm-10 col-sm-offset-1 user-info">
-            <p><i class="fa fa-user"></i> {{ _('Username')}}: {{ user.name }}</p>
+            <p><i class="fa fa-user"></i> Username: {{ user.name }}</p>
             {% if private %}
-                <p><i class="fa fa-envelope"></i> {{_('E-mail')}}: {{ user.email_addr }}</p>
+                <p><i class="fa fa-envelope"></i> E-mail: {{ user.email_addr }}</p>
             {% endif %}
             
         
             
             
-            <p><i class="fa fa-clock-o"></i> {{ _('Joined') }}: {{user.created[8:10]}}-{{user.created[5:7]}}-{{user.created[0:4]}}</p>
+            <p><i class="fa fa-clock-o"></i> Joined: {{user.created[8:10]}}-{{user.created[5:7]}}-{{user.created[0:4]}}</p>
             {% if private %}
                 
                 <div class="text-center">
-                    <a href="{{ url_for('account.update_profile', name=user.name) }}" class="btn btn-default btn-sm btn-padded"><i class="fa fa-pencil-square-o"></i> {{ _('Edit') }}</a>
+                    <a href="{{ url_for('account.update_profile', name=user.name) }}" class="btn btn-default btn-sm btn-padded"><i class="fa fa-pencil-square-o"></i> Edit</a>
                     {% if (user.valid_email == False) %}
                       {% if (user.confirmation_email_sent == False) %}
                       <a href="{{ url_for('account.confirm_email')}}" class="btn btn-danger">Validate email</a>
@@ -109,7 +88,7 @@
         {% if pagination.has_prev %}
           <li>
           <a href="{{ url_for_other_page(pagination.page - 1)
-            }}">&laquo; {{_('Prev')}} | </a>
+            }}">&laquo; Prev | </a>
           </li>
         {% endif %}
 
@@ -129,7 +108,7 @@
         {% if pagination.has_next %}
           <li>
           <a href="{{ url_for_other_page(pagination.page + 1)
-            }}"> | {{_('Next')}} &raquo;</a>
+            }}"> | Next &raquo;</a>
           </li>
         {% endif %}
     </ul>
