--- a/templates/account/email/validate_account.html
+++ b/templates/account/email/validate_account.html
@@ -23,9 +23,9 @@ e-mail address by visiting the URL below:
 If you did not request this conformation, please ignore this email.
 </p>
 <p>
-{{ _('Regards') }},
+Regards,
 </p>
 <p>
-{{ config.BRAND }} {{ _('Team') }}
+{{ config.BRAND }} Team
 </p>
 {% endblock %}
