--- a/templates/account/register.html
+++ b/templates/account/register.html
@@ -6,20 +6,20 @@
 
     <div class="col-xs-12 col-sm-6 col-sm-offset-3">
         {% include "_flash_messages.html" %}
-        <h4 class="text-center">{{ _('Create an account') }}</h4>
+        <h4 class="text-center">Create an account</h4>
         <form method="post" role="form" action="{{ url_for('account.register') }}">
       {{ form.hidden_tag() }}
       
             <fieldset>
-      {{ render_field(form.fullname, placeholder= _('Full Name'), class="form-control", required="required", pattern=".{3,35}", title="Must be between 3 and 35 characters", autofocus="autofocus") }}
-      {{ render_field(form.name, placeholder= _('Username'), class="form-control", required="required", pattern=".{3,35}", title="Must be between 3 and 35 characters") }}
-      {{ render_field(form.email_addr, placeholder= _('Email'), class="form-control", type="email", required="required") }}
-      {{ render_field(form.password, placeholder= _('Password'), class="form-control", type="password", required="required", pattern=".{6,}", title="Must be a minimum of 6 characters") }}
-      {{ render_field(form.confirm, placeholder= _('Confirm Password'), class="form-control", type="password", required="required", pattern=".{6,}", title="Must be a minimum of 6 characters") }}
+      {{ render_field(form.fullname, placeholder="Full Name", class="form-control", required="required", pattern=".{3,35}", title="Must be between 3 and 35 characters", autofocus="autofocus") }}
+      {{ render_field(form.name, placeholder="Username", class="form-control", required="required", pattern=".{3,35}", title="Must be between 3 and 35 characters") }}
+      {{ render_field(form.email_addr, placeholder="Email", class="form-control", type="email", required="required") }}
+      {{ render_field(form.password, placeholder="Password", class="form-control", type="password", required="required", pattern=".{6,}", title="Must be a minimum of 6 characters") }}
+      {{ render_field(form.confirm, placeholder="Confirm Password", class="form-control", type="password", required="required", pattern=".{6,}", title="Must be a minimum of 6 characters") }}
       
                 <div class="pull-right" role="group">
                     <input type="reset" value="Clear" class="btn btn-default" />
-                    <input type="submit" value="{{_('Create Account')}}" class="btn btn-success" />
+                    <input type="submit" value="Create Account" class="btn btn-success" />
                 </div>
                 <a href="{{url_for('account.signin')}}" class="btn btn-inverse" onclick="javascript:history.go(-1)"> 
                 <i class="glyphicon glyphicon-arrow-left"></i>
@@ -28,10 +28,10 @@
         </form>
         <div class="padding-top">
             <p class="text-center muted">
-                    {{ _('By clicking the') }} 
-                <strong>{{ _('Create Account') }}</strong> {{ _('button you are agreeing to
-                    our') }} 
-                <a href={{url_for('help.tos')}}>{{ _('terms of use') }}</a>.
+                    By clicking the 
+                <strong>Create Account</strong> button you are agreeing to
+                    our
+                <a href={{url_for('help.tos')}}>terms of use</a>.
                 
             </p>
         </div>
