--- a/templates/admin/categories.html
+++ b/templates/admin/categories.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div id="categories" class="col-sm-9 col-sm-offset-3">
                 {% include "_flash_messages.html" %}
-                <h1><strong>{{ _('Admin') }}:</strong> {{ _('Manage Categories') }}</h1>
+                <h1><strong>Admin:</strong> Manage Categories</h1>
                 <hr>
                 <div class="row">
                     <div id="add" class="col-sm-12">
@@ -18,17 +18,17 @@
                         <form role="form" method="POST" action="{{url_for('admin.categories')}}">
                             {{form.hidden_tag()}}
                             <fieldset>
-                            {{ render_field(form.name, placeholder= _('Category name'), class="form-control", required="required") }}
-                            {{ render_field(form.description, placeholder= _('Category description'), class="form-control", required="required") }}
+                            {{ render_field(form.name, placeholder="Category name", class="form-control", required="required") }}
+                            {{ render_field(form.description, placeholder="Category description", class="form-control", required="required") }}
                             <div class="pull-right" role="group">
-                                <button type="submit" class="btn btn-danger">{{_('Add')}}</button>
+                                <button type="submit" class="btn btn-danger">Add</button>
                             </div>
                             </fieldset>
                         </form>
                     </div>
                 </div>
                 {% if categories %}
-                <h2 class="padding-top-xs">{{_('Current Categories')}}</h2>
+                <h2 class="padding-top-xs">Current Categories</h2>
                 <table class="table table-stripped table-condensed table-hover table-responsive">
                     <col style="width:30%">
                     <col style="width:30%">
@@ -45,11 +45,11 @@
                         <td>{{c.name}}</td>
                         <td style="text-align:center;">{{ n_projects_per_category[c.short_name]}}</td>
                         <td style="text-align:center;"><div class="btn-group">
-                            <a href="{{url_for('admin.update_category', id=c.id)}}" class="btn"><i class="glyphicon glyphicon-edit"></i> {{_('Edit Category')}}</a>
+                            <a href="{{url_for('admin.update_category', id=c.id)}}" class="btn"><i class="glyphicon glyphicon-edit"></i> Edit Category</a>
                             {% if n_projects_per_category[c.short_name] == 0 and (categories | count > 1) %}
-                            <a href="{{url_for('admin.del_category', id=c.id)}}" class="btn"><i class="glyphicon glyphicon-trash"></i> {{_('Delete Category')}}</a>
+                            <a href="{{url_for('admin.del_category', id=c.id)}}" class="btn"><i class="glyphicon glyphicon-trash"></i> Delete Category</a>
                             {% else %}
-                            <a href="#" class="btn disabled"><i class="glyphicon glyphicon-trash"></i> {{_('Delete Category')}}</a>
+                            <a href="#" class="btn disabled"><i class="glyphicon glyphicon-trash"></i> Delete Category</a>
                             {% endif %}
                         </div></td>
                     </tr>
