--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -17,7 +17,7 @@
                             <a href="{{ url_for('account.projects', name=current_user.name) }}" rel="nofollow">
                             <div class="well">
                                 <i class="fa fa-folder-open fa-4x"></i>
-                                <h3  class="margin-bottom-xs">{{_('Projects')}}</h3>
+                                <h3  class="margin-bottom-xs">Projects</h3>
                             </div>
                             </a>
                         </div>
@@ -26,7 +26,7 @@
                             <a href="{{url_for('admin.featured')}}" rel="nofollow">
                             <div class="well">
                                 <i class="fa fa-star fa-4x"></i>
-                                <h3  class="margin-bottom-xs"> {{_('Featured')}}</h3>
+                                <h3  class="margin-bottom-xs">Featured</h3>
                             </div>
                             </a>
                         </div>         
@@ -35,7 +35,7 @@
                             <a href="{{url_for('admin.categories')}}" rel="nofollow">
                             <div class="well">
                                 <i class="fa fa-check fa-4x"></i>
-                                <h3  class="margin-bottom-xs"> {{_('Categories')}}</h3>
+                                <h3  class="margin-bottom-xs">Categories</h3>
                             </div>
                             </a>
                         </div>
@@ -44,7 +44,7 @@
                             <a href="{{url_for('admin.users')}}" rel="nofollow">
                             <div class="well">
                                 <i class="fa fa-user fa-4x"></i>
-                                <h3  class="margin-bottom-xs"> {{_('Administrators')}}</h3>
+                                <h3  class="margin-bottom-xs">Administrators</h3>
                             </div>
                             </a>
                         </div>
@@ -53,7 +53,7 @@
                             <a href="{{url_for('admin.export_users', format='csv')}}" rel="nofollow">
                                 <div class="well">
                                     <i class="fa fa-list fa-4x"></i> 
-                                    <h3  class="margin-bottom-xs">{{_('Export Users')}}</h3>
+                                    <h3  class="margin-bottom-xs">Export Users</h3>
                                 </div>
                             </a>
                         </div>
@@ -62,7 +62,7 @@
                             <a href="{{url_for('rq_dashboard.overview')}}" rel="nofollow">
                             <div class="well">
                                 <i class="fa fa-dashboard fa-4x"></i>
-                                <h3  class="margin-bottom-xs"> {{_('Background Jobs')}}</h3>
+                                <h3  class="margin-bottom-xs">Background Jobs</h3>
                             </div>
                             </a>
                         </div>
