--- a/templates/admin/projects.html
+++ b/templates/admin/projects.html
@@ -10,7 +10,7 @@
             <div class="row">
                 <div class="col-sm-9 col-sm-offset-3">
                     {% include "_flash_messages.html" %}
-                    <h1><strong>{{ _('Admin') }} :</strong> {{ _('Featured projects') }}</h1>
+                    <h1><strong>Admin :</strong> Featured projects</h1>
                 {% include "admin/js/featured_projects.js" %}
                     <ul class="nav nav-pills nav-pills-dark">
                         {% for c in categories %}
