--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -10,7 +10,7 @@
         <div class="row">
             <div class="col-sm-9 col-sm-offset-3">
                 {% include "_flash_messages.html" %}
-                <h1><strong>{{ _('Admin') }}:</strong> {{ _('Manage Administrators') }}</h1>
+                <h1><strong>Admin:</strong> Manage Administrators</h1>
                 {% from "_formhelpers.html" import render_field %}
                 <form class="form-search" method="POST">
                 {{ form.hidden_tag() }}
@@ -22,7 +22,7 @@
                 </div>
                 </form>
                 {% if found %}
-                <h2 class="padding-top-sm">{{ _('Results') }}</h2>
+                <h2 class="padding-top-sm">Results</h2>
                 <table class="table table-stripped table-condensed table-hover table-responsive">
                     <thead>
                         <tr>
@@ -40,7 +40,7 @@
                         
                 {% endif %}
         
-                <h2 class="padding-top-sm">{{ _('Current Administrators') }}</h2>
+                <h2 class="padding-top-sm">Current Administrators</h2>
                 <table class="table table-stripped table-condensed table-hover table-responsive">
                     <thead>
                         <tr>
