--- a/templates/projects/auditlog.html
+++ b/templates/projects/auditlog.html
@@ -67,7 +67,7 @@
                         {% endfor %}
                         </table>
                         {% else %}
-                            <h1>{{ _('No logs so far.') }}</h1>
+                            <h1>No logs so far.</h1>
                         {% endif %}
                         
                     </div>
@@ -79,7 +79,7 @@
                     <div class="row">
                         <div class="col-sm-9 col-sm-offset-3">
                             <div class="page-header">
-                                <h1>{{ _('This project does not exist.') }}</h1>
+                                <h1>This project does not exist.</h1>
                             </div>
                         </div>
                     </div>
