--- a/templates/projects/blproject.html
+++ b/templates/projects/blproject.html
@@ -18,7 +18,7 @@
                     <div class="container text-center ie-mid-vcenter padding-top">
                         <div class="container-padded">
                             <h1>{{ helper.render_project_title(project, upload_method) }}</h1>
-                            <h2>{{ overall_progress | round | int }}% {{_('complete')}}</h2>
+                            <h2>{{ overall_progress | round | int }}% complete</h2>
                             <div class="col-xs-12">
                             <a href="{{ url_for('project.presenter', short_name=project.short_name)}}" class="btn btn-circle btn-circle-large btn-circle-progress {% if overall_progress < 100 %}glowing-link{% endif %}" data-progress="{{ overall_progress | round | int }}">
                                 <div class="arc arc-q1"></div>
@@ -139,7 +139,7 @@
                                 <h2>Get involved</h2>
                                 <p>Your contributions will have a direct impact on enabling future reasearch at the British Library.<p>
                                 <div class="row text-center padding-top-xs">
-                                    <a href="{{ url_for('project.presenter', short_name=project.short_name)}}" class="btn btn-danger"> {{ _('Contribute now') }}</a>
+                                    <a href="{{ url_for('project.presenter', short_name=project.short_name)}}" class="btn btn-danger"> Contribute now</a>
                                 </div>
                                 <hr class="padding-bottom-xs">
                                 <a href="#" data-content="Share on Facebook" class="btn-popover btn btn-facebook"
