--- a/templates/projects/delete.html
+++ b/templates/projects/delete.html
@@ -13,15 +13,15 @@
                           {% include "_flash_messages.html" %}
                           <h1><strong>{{project.name}}</strong>: Delete project</h1>
                           <div class="alert alert-danger">
-                              <strong>{{ _('Warning!') }}</strong> {{ _('If you delete the project, it and its tasks will be gone forever!') }}
+                              <strong>Warning!</strong> If you delete the project, it and its tasks will be gone forever!
                           </div>
                           <form role="form" method="post" action="{{ url_for('project.delete', short_name = project.short_name) }}">
                           <fieldset>
                               <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
-                              <h3><strong>{{ _('Are you sure you want to delete this project and all of its tasks?') }}</strong></h3>
+                              <h3><strong>Are you sure you want to delete this project and all of its tasks?</strong></h3>
                               <div class="pull-right" role="group">
                                 <input type="submit" class="btn btn-default" value="Yes, delete it"/>
-                                <a href="{{ url_for('project.tasks', short_name = project.short_name) }}" class="btn btn-danger">{{ _('No, do not delete it!') }}</a>
+                                <a href="{{ url_for('project.tasks', short_name = project.short_name) }}" class="btn btn-danger">No, do not delete it!</a>
                               </div>
                         </div>
                     </div>
@@ -29,7 +29,7 @@
             </div>
 {% else %}
   <div class="page-header">
-    <h1>{{ _('Sorry! This project does not exist.') }}</h1>
+    <h1>Sorry! This project does not exist.</h1>
   </div>
 {% endif %}
 {{ helper.broken_image() }}
