--- a/templates/projects/importers/csv.html
+++ b/templates/projects/importers/csv.html
@@ -12,17 +12,17 @@
                 <div class="col-sm-9 col-sm-offset-3">
                     {% include "_flash_messages.html" %}
                     {{ helper.render_loading("Importing tasks, this may take a while, please wait...") }}
-                    <h1><strong>{{project.name}}</strong>: {{_('Import tasks')}}</h1>
+                    <h1><strong>{{project.name}}</strong>: Import tasks</h1>
                     {% if form %}
                         <hr>
-                    <h3>{{_('From a CSV file')}}</h3>
+                    <h3>From a CSV file</h3>
                     <form role="form" method="post" action="{{ url_for(target, short_name=project.short_name) }}">
                         <fieldset>
                             {{ form.hidden_tag() }}
-                            {{ render_field(form.csv_url, class_="input-block-level form-control", placeholder=_('The URL of the CSV file'), required="required", autofocus="autofocus", type="url") }}
+                            {{ render_field(form.csv_url, class_="input-block-level form-control", placeholder="The URL of the CSV file", required="required", autofocus="autofocus", type="url") }}
                             <div class="pull-right" role="group">
-                                <a href="{{ url_for('project.tasks', short_name=project.short_name) }}" class="btn btn-default">{{_('Cancel')}}</a>
-                                <input id="import" type="submit" value="{{_('Import')}}" class="btn btn-danger" />
+                                <a href="{{ url_for('project.tasks', short_name=project.short_name) }}" class="btn btn-default">Cancel</a>
+                                <input id="import" type="submit" value="Import" class="btn btn-danger" />
                             </div>
                         </fieldset>
                     </form>
