--- a/templates/projects/importers/epicollect.html
+++ b/templates/projects/importers/epicollect.html
@@ -12,19 +12,19 @@
                 <div class="col-sm-9 col-sm-offset-3">
                     {% include "_flash_messages.html" %}
                     {{ helper.render_loading("Importing tasks, this may take a while, please wait...") }}
-                    <h1><strong>{{project.name}}</strong>: {{_('Import tasks')}}</h1>
+                    <h1><strong>{{project.name}}</strong>: Import tasks</h1>
                   {% if form %}
                       <hr>
-                  <h3>{{_('From an EpiCollect Plus project')}}</h3>
+                  <h3>From an EpiCollect Plus project</h3>
                   
                   <form role="form" method="post" action="{{ url_for(target, short_name=project.short_name) }}">
                     <fieldset>
                     {{ form.hidden_tag() }}
-                      {{ render_field(form.epicollect_project, class_="input-block-level form-control", placeholder=_('The name of the public EpiCollect Plus project'), required="required", autofocus="autofocus") }}
-                      {{ render_field(form.epicollect_form, class_="input-block-level form-control", placeholder=_('The name of the project\'s form'), required="required") }}
+                      {{ render_field(form.epicollect_project, class_="input-block-level form-control", placeholder="The name of the public EpiCollect Plus project", required="required", autofocus="autofocus") }}
+                      {{ render_field(form.epicollect_form, class_="input-block-level form-control", placeholder="The name of the project\'s form", required="required") }}
                       <div class="pull-right" role="group">
-                        <a href="{{ url_for('project.tasks', short_name=project.short_name) }}" class="btn btn-default">{{_('Cancel')}}</a>
-                        <input type="import" value="{{_('Import')}}" class="btn btn-danger" />
+                        <a href="{{ url_for('project.tasks', short_name=project.short_name) }}" class="btn btn-default">Cancel</a>
+                        <input type="import" value="Import" class="btn btn-danger" />
                       </div>
                     </fieldset>
                   </form>
