--- a/templates/projects/task_autoimport_options.html
+++ b/templates/projects/task_autoimport_options.html
@@ -11,11 +11,11 @@
         <div class="row">
             <div class="col-sm-9 col-sm-offset-3">
                 {% include "_flash_messages.html" %}
-                {{ helper.render_project_title(project, subtitle=_('Setup task autoimporter'))}}
+                {{ helper.render_project_title(project, subtitle="Setup task autoimporter")}}
                 <div class="row">
                     <div class="col-sm-12">
-                        <p class="lead">{{_('Use one of the following available')}}
-                        <strong>{{_('importers')}}</strong> {{_('to setup as the autoimporter')}}</p>
+                        <p class="lead">Use one of the following available
+                        <strong>importers</strong> to setup as the autoimporter</p>
                     </div>
                 </div>
                 {% for row in available_importers|batch(2) %}
