--- a/templates/projects/task_presenter_editor.html
+++ b/templates/projects/task_presenter_editor.html
@@ -27,9 +27,9 @@
                     {{ form.hidden_tag() }}
                     <fieldset>
                         <div id="code-btns" role="group" class="btn-group">
-                            <a href="{{url_for('project.tasks', short_name=project.short_name)}}" class="btn btn-code">{{ _('Cancel') }}</a>
+                            <a href="{{url_for('project.tasks', short_name=project.short_name)}}" class="btn btn-code">Cancel</a>
                             <a href="#" class="btn btn-preview btn-code" value="preview">Preview</a>
-                            <input type="submit" value={{ _('Update') }} class="btn btn-code" />
+                            <input type="submit" value="Update" class="btn btn-code" />
                         </div>
                         <div id="code-container">
                         {{ render_field(form.editor)}}
