--- a/templates/projects/tasks/gdocs-image.html
+++ b/templates/projects/tasks/gdocs-image.html
@@ -1,7 +1,6 @@
 <div class="well">
-    <h2><i class="glyphicon glyphicon-picture"></i> {{_('Image Pattern Recognition')}}</h2> 
-    <h3>{{_('Re-use the Flickr Person Finder tasks')}}</h3>
+    <h2><i class="glyphicon glyphicon-picture"></i> Image Pattern Recognition</h2> 
+    <h3>Re-use the Flickr Person Finder tasks</h3>
   <p><a href="{{url_for('project.import_task', short_name=project.short_name,
-      type='gdocs', template='image')}}" class="btn btn-inverse">{{_('Use the
-      Image tasks')}}</a></p>
+      type='gdocs', template='image')}}" class="btn btn-inverse">Use the Image tasks</a></p>
 </div>
