--- a/templates/projects/tasks/gdocs-sound.html
+++ b/templates/projects/tasks/gdocs-sound.html
@@ -1,7 +1,7 @@
 <div class="well">
-    <h2><i class="glyphicon glyphicon-music"></i> {{_('Sound Pattern Recognition')}}</h2> 
-    <h3>{{_('Re-use the SoundCloud tasks')}}</h3>
+    <h2><i class="glyphicon glyphicon-music"></i> Sound Pattern Recognition</h2> 
+    <h3>Re-use the SoundCloud tasks</h3>
   <p><a href="{{url_for('project.import_task', short_name=project.short_name,
-      type='gdocs', template='sound')}}" class="btn btn-inverse">{{_('Use the
-      Sound tasks')}}</a></p>
+      type='gdocs', template='sound')}}" class="btn btn-inverse">Use the
+      Sound tasks</a></p>
 </div>
