--- a/templates/projects/tasks/gdocs-video.html
+++ b/templates/projects/tasks/gdocs-video.html
@@ -1,7 +1,7 @@
 <div class="well">
-    <h2><i class="glyphicon glyphicon-film"></i> {{_('Video Pattern Recognition')}}</h2> 
-    <h3>{{_('Re-use the Vimeo tasks')}}</h3>
+    <h2><i class="glyphicon glyphicon-film"></i> Video Pattern Recognition</h2> 
+    <h3>Re-use the Vimeo tasks</h3>
   <p><a href="{{url_for('project.import_task', short_name=project.short_name,
-      type='gdocs', template='video')}}" class="btn btn-inverse">{{_('Use the
-      Video tasks')}}</a></p>
+      type='gdocs', template='video')}}" class="btn btn-inverse">Use the
+      Video tasks</a></p>
 </div>
