--- a/templates/stats/index.html
+++ b/templates/stats/index.html
@@ -16,13 +16,13 @@
                         {% if enforce_privacy and (current_user.is_anonymous() or (current_user.is_authenticated and not current_user.admin)) %}
                         {{ privacy.render_lock_page() }}
                         {% else %}
-                        <h1 class="xs-center"><i class="fa fa-trophy"></i>{{_('Community Leaderboard')}}</h1>
+                        <h1 class="xs-center"><i class="fa fa-trophy"></i>Community Leaderboard</h1>
                         <table class="table table-striped table-hover table-condensed">
                             <thead class="inset-text-mid-grey">
                                 <tr>
-                                    <th class="text-center">{{ _('Rank') }}</th>
-                                    <th>{{ _('Name') }}</th>
-                                    <th class="text-center">{{ _('Contributions') }}</th>
+                                    <th class="text-center">Rank</th>
+                                    <th>Name</th>
+                                    <th class="text-center">Contributions</th>
                                 </tr>
                             </thead>
                             <tbody>
